<resources>
    <string name="app_name">tableclocks</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="preview_image_description" translatable="false">preview image</string>
    <string name="back_button_description">back</string>
    <string name="main_over_img_description" translatable="false">main img</string>
    <string name="main_image_cover_description" translatable="false">image cover</string>
    <string name="days_filler" translatable="false">0000/00/00(Tue)</string>
    <string name="times_filler" translatable="false">00:00</string>
    <string name="sec_filler" translatable="false">00</string>
    <string name="settings_button">settings</string>
    <string name="preview_text">Sample</string>
    <string name="themeImage" translatable="false">themeImage</string>
    <string name="themes_gallery_title">Themes</string>
    <string name="themeSettingBtn">Select</string>
    <string name="themeSetBtn">Set theme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Settings_General">General</string>
    <string name="set_dark_mode_text_true">Dark mode</string>
    <string name="set_dark_mode_text_false">Light mode</string>
    <string name="set_dark_mode_text_system">Follow system</string>
    <string name="set_dark_mode_title">Dark mode (Android 10~)</string>
    <string name="title_activity_restart" translatable="false">RestartActivity</string>
    <string name="restart_dialog_text">Restart the application to reflect the changes.</string>
    <string name="Settings_Info">Information</string>
    <string name="Settings_appversion_title">App Version</string>
    <string name="settings_contact_title">Contact (open meil app.)</string>
    <string name="err_mailapp_missing">Can\'t find the mail app.</string>
    <string name="settings_title">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>