<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/Settings_General"
        app:iconSpaceReserved="false">
        <ListPreference
            android:defaultValue="MODE_NIGHT_FOLLOW_SYSTEM"
            android:entries="@array/set_dark_mode_text"
            android:entryValues="@array/set_dark_mode_val"
            android:key="set_dark_mode"
            android:title="@string/set_dark_mode_title"
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="true"
            app:shouldDisableView="true"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/Settings_Info"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:key="app_ver"
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:title="@string/Settings_appversion_title"
            app:enabled="false"
            app:iconSpaceReserved="false"
            app:selectable="false"
            app:shouldDisableView="false"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:title="@string/settings_contact_title"
            app:iconSpaceReserved="false"
            app:key="contact">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="mailto:"
                />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>