<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/digitalClocksContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DigitalClockFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/days_filler"
        android:textColor="@color/textColor"
        android:textSize="30dp"
        android:translationY="16dp"
        app:fontFamily="@font/rounded_mplus_1c_bold"
        app:layout_constraintBottom_toTopOf="@+id/textviewTimes"
        app:layout_constraintStart_toStartOf="@+id/textviewTimes"
        tools:ignore="SpUsage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textviewTimes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:singleLine="true"
        android:text="@string/times_filler"
        android:textColor="@color/textColor"
        android:textSize="80dp"
        app:autoSizeMaxTextSize="300dp"
        app:autoSizeMinTextSize="30dp"
        app:autoSizeTextType="none"
        app:fontFamily="@font/rounded_mplus_1c_bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintDimensionRatio="2.2:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:ignore="SpUsage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/sec_filler"
        android:textColor="@color/textColor"
        android:textSize="34dp"
        app:fontFamily="@font/rounded_mplus_1c_bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textviewTimes"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textviewTimes"
        tools:ignore="SpUsage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>