<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wrap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/themeFragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_theme_drawing" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clocksContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rounded_mplus_1c_bold"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:text="@string/days_filler"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:translationY="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textviewTimes"
            app:layout_constraintStart_toStartOf="@+id/textviewTimes"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/textviewTimes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/rounded_mplus_1c_bold"
            android:singleLine="true"
            android:text="@string/times_filler"
            android:textColor="@color/white"
            android:textSize="80dp"
            app:autoSizeMaxTextSize="300dp"
            app:autoSizeMinTextSize="30dp"
            app:autoSizeTextType="none"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintDimensionRatio="2.2:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/textViewSec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rounded_mplus_1c_bold"
            android:includeFontPadding="false"
            android:text="@string/sec_filler"
            android:textColor="@color/white"
            android:textSize="34dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textviewTimes"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textviewTimes"
            tools:ignore="SpUsage" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <ImageButton
        android:id="@+id/settingsBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/settings_button"
        android:contextClickable="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_settings_24"
        tools:srcCompat="@drawable/baseline_settings_24" />

</androidx.constraintlayout.widget.ConstraintLayout>